addons/editor-dark-mode/experimental_editor.css
/* Page background */
[class*="gui_body-wrapper_"],
[class*="gui_tab_"]:not([class*="gui_is-selected_"]):hover,
[class*="backpack_backpack-item_"] > div,
[class*="custom-procedures_workspace_"] .blocklySvg,
[class*="record-modal_meter-container_"],
[class*="meter_mask_"],
[class*="record-modal_waveform-container_"] {
  background-color: var(--editorDarkMode-page);
  color: var(--editorDarkMode-page-text);
}
[class*="backpack_status-message_"] {
  color: var(--editorDarkMode-page-text);
}
[class*="gui_tab_"]:not([class*="gui_is-selected_"]):hover {
  color: var(--editorDarkMode-page-transparentText);
}
[class*="gui_tab_"]:not([class*="gui_is-selected_"]):hover img {
  filter: var(--editorDarkMode-page-tabHoverFilter);
}
[class*="loader_background_"] {
  background-color: var(--editorDarkMode-page-loader);
}

/* Menu bar background */
[class*="menu-bar_menu-bar_"],
[class*="menu_menu_"],
[class*="menu_submenu_"] > [class*="menu_menu_"]::-webkit-scrollbar-track,
[class*="modal_header_"],
[class*="webgl-modal_illustration"] {
  background-color: var(--editorDarkMode-menuBar);
  color: var(--editorDarkMode-menuBar-text);
}
[class*="menu_submenu_"] > [class*="menu_menu_"]::-webkit-scrollbar-thumb {
  border-color: var(--editorDarkMode-menuBar);
}
[class*="menu-bar_menu-bar-item_"],
[class*="input_input-form_"][class*="project-title-input_title-field_"],
[class*="author-info_author-info_"],
[class*="inline-message_info_"],
[class*="modal_header-item_"] {
  color: var(--editorDarkMode-menuBar-text);
}
[class*="share-button_share-button_"],
[class*="menu-bar_remix-button_"] {
  color: white;
}
[class*="inline-message_success_"] {
  color: var(--editorDarkMode-menuBar-dimText);
}
[class*="spinner_spinner_"][class*="spinner_info_"] {
  border-color: var(--editorDarkMode-menuBar-transparentText);
}
[class*="spinner_spinner_"][class*="spinner_info_"]::after {
  border-top-color: var(--editorDarkMode-menuBar-text);
}
[class*="menu-bar_file-group_"] [class*="menu-bar_hoverable_"] > img,
[class*="menu-bar_menu-bar-menu_"]
  > [class*="menu_menu_"]
  > [class*="menu_menu-item_"]:first-child
  [class*="settings-menu_icon_"] /* language icon */,
[class*="settings-menu_expand-caret_"],
[class*="settings-menu_check_"],
[class*="menu-bar_help-icon_"],
[class*="community-button_community-button-icon_"],
[class*="menu-bar_mystuff-icon_"],
.sa-editormessages::before,
[class*="account-nav_user-info_"] [class*="account-nav_dropdown-caret-position_"] img,
[class*="modal_back-button_"] [class*="button_icon_"],
[class*="modal_header-item-close_"] [class*="close-button_close-icon_"] {
  filter: var(--editorDarkMode-menuBar-filter);
}
[class*="menu-bar_divider_"],
[class*="input_input-form_"][class*="project-title-input_title-field_"],
[class*="project-title-input_title-field_"]:hover:not(:focus),
[class*="menu_menu-section_"] {
  border-color: var(--editorDarkMode-menuBar-border);
}
[class*="community-button_community-button_"],
[class*="user-avatar_user-thumbnail_"] {
  box-shadow: 0 0 0 1px var(--editorDarkMode-menuBar-border);
}
[class*="modal_header_"] [class*="close-button_large_"] {
  background-color: var(--editorDarkMode-menuBar-border);
  box-shadow: 0 0 0 2px var(--editorDarkMode-menuBar-border);
}
[class*="modal_header_"] [class*="close-button_large_"]:hover {
  box-shadow: 0 0 0 4px var(--editorDarkMode-menuBar-border);
}
[class*="menu-bar_menu-bar-item_"][class*="menu-bar_active_"],
[class*="menu-bar_menu-bar-item_"][class*="menu-bar_hoverable_"]:hover,
[class*="menu_menu-item_"][class*="menu_active_"],
[class*="menu_menu-item_"]:hover,
[class*="menu_menu-item_"][class*="menu_expanded_"],
[class*="menu_submenu_"] > [class*="menu_menu_"]::-webkit-scrollbar-thumb {
  background-color: var(--editorDarkMode-menuBar-border);
}

/* Active tab background */
[class*="gui_tab_"][class*="gui_is-selected_"] {
  background-color: var(--editorDarkMode-activeTab);
}

/* Inactive tab background */
[class*="gui_tab_"] {
  background-color: var(--editorDarkMode-tab);
  color: var(--editorDarkMode-tab-text);
}
[class*="gui_tab_"] img {
  filter: var(--editorDarkMode-tab-filter);
}

/* Sprite list background */
[class*="sprite-selector_sprite-selector_"],
[class*="modal_modal-content_"][class*="modal_full-screen_"],
[class*="library_library-scroll-grid_"] {
  background-color: var(--editorDarkMode-selector);
  color-scheme: var(--editorDarkMode-selector-colorScheme);
}
[class*="sprite-selector-item_sprite-info_"],
[class*="library_library-category-title_"] {
  color: var(--editorDarkMode-selector-text);
}
[class*="card_card_"] {
  border-color: var(--editorDarkMode-selector);
}

/* Asset list background */
[class*="selector_wrapper_"] {
  background-color: var(--editorDarkMode-selector2);
  color-scheme: var(--editorDarkMode-selector2-colorScheme);
}
[class*="sprite-selector-item_sprite-selector-item_"],
[class*="selector_list-item_"] [class*="sprite-selector-item_sprite-info_"] {
  color: var(--editorDarkMode-selector2-text);
}
[class*="gui_tab-panel_"]:nth-child(4) [class*="sprite-selector-item_sprite-image_"] {
  filter: var(--editorDarkMode-selector2-filter);
}

/* Selected list item background */
[class*="sprite-selector-item_sprite-selector-item_"]:hover,
[class*="sprite-selector-item_sprite-selector-item_"][class*="sprite-selector-item_is-selected_"] {
  background-color: var(--editorDarkMode-selectorSelection);
  color: var(--editorDarkMode-selectorSelection-text);
}
[class*="sprite-selector-item_sprite-selector-item_"]:not([class*="sprite-selector-item_is-selected_"]):hover
  [class*="sprite-selector-item_sprite-info_"] {
  color: var(--editorDarkMode-selectorSelection-text);
}
/* ... */

